# wasm_wgpu_mt

./: .gitignore  Cargo.toml  README.md  build.sh  rust-toolchain.toml  test.sh
.cargo/: config.toml
src/: lib.rs  process_worker.js  shader.wgsl
webtest/: index.html  package-lock.json  package.json  vite.config.js  worker.js
webtest/src/: compute_worker.js  process_worker.js
