[package]
name = "wgpu_examples"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = "23.0.0"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
console_error_panic_hook = "0.1"
console_log = "0.2"
futures-intrusive = "0.5"
js-sys = "0.3.77"