[package]
name = "wgpu_examples"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = "23.0.0"
bytemuck = { version = "1.14", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.43"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
wasm_thread = { git = "https://github.com/jaehunkim/wasm_thread", branch = "main" }
flume = "0.11.0"
pollster = "0.3.0"
